# cpp-code-samples

./: .editorconfig  .gitattributes  .gitignore  Code Samples C++.sln  Directory.Build.props  README.md
BlockChainExcecutable/: BlockChainExcecutable.cpp  BlockChainExcecutable.vcxproj  BlockChainExcecutable.vcxproj.filters
Code Samples C++/: ArrayHelper.cpp  ArrayHelper.h  BSBot.cpp  BSBot.h  BSGame.cpp  BSGame.h  BSInGameMenu.cpp  BSInGameMenu.h  BSMainMenu.cpp  BSMainMenu.h  BSSettingMenu.cpp  BSSettingMenu.h  BShip.cpp  BShip.h  BinarySearch.cpp  BinarySearch.h  BinaryTree.cpp  BinaryTree.h  Calculator.cpp  Calculator.h  Cell.cpp  Cell.h  Chess.cpp  Chess.h  ChessEnums.h  ChessFigure.cpp  ChessFigure.h  Code Samples C++.cpp  Code Samples C++.vcxproj  Code Samples C++.vcxproj.filters  Converter.cpp  Converter.h  Enums.h  Field.cpp  Field.h  FileIO.cpp  FileIO.h  Fraction.h  GameField.cpp  GameField.h  (+58 more)
Common/: AVLTree.h  BinarySearch.h  CommonLib.vcxproj  CommonLib.vcxproj.filters  Container.h  Converter.h  Converter_Old.h  DataPack.h  DataPack_Backup.h  DynamicArray.h  DynamicStack.h  Edge.h  Graph.h  GraphItem.h  IO.h  LL.h  LLItem.h  ListItem.h  Log.h  LogItem.h  Namespaces.h  Node.h  OWLL.h  Plotter.h  Polynom.h  QuickSort.h  SField.h  SLoader.h  SObject.h  Sorts.h  SortsAdv.h  StrHelper.cpp  StrHelper.h  TWLL.h  TreeNode.h  pch.h  Простой односвязный список.cpp
Common Tests/: AVLTreeTest.h  DataPackTest.h  GraphConnectNodesTest.graphml  GraphTests.h  IOtests.h  LLTests.h  ListsTests.h  Main.cpp  SFieldTests.h  SLoaderTest.txt  SObjectTests.h  SObject_Backup.H  SearchTests.h  SortsTests.h  StrHelperTests.h  Tests.vcxproj  Tests.vcxproj.filters  Тест Запись чтение файлов.txt
Constants/: Constants.h  Constants.vcxproj  Constants.vcxproj.filters  Enums.h
Crypto/: Block.h  BlockBackup.h  BlockChain.h  BlockChainBackup.h  BlockChainOld.txt  Client.h  ClientBackup.h  Crypto.vcxproj  Crypto.vcxproj.filters  Log.h  Namespaces.h  SHA1.h  ShamirsSecretSharing.h  Предварительный список протоколов v2.3.docx
CryptoTests/: AddTestTime.csv  BC add log.txt  BC.h  BlockChainAddBlocksTest.graphml  BlockChainConnectTest.graphml  BlockchainTests.h  Main.cpp  (+12 more)
Legacy/AlexandraCppAssignments2015/modernized/: CMakeLists.txt
Legacy/AlexandraCppAssignments2015/modernized/include/: alexandra_assignments.hpp
Legacy/AlexandraCppAssignments2015/modernized/scripts/: test.ps1
Legacy/AlexandraCppAssignments2015/modernized/tests/: alexandra_assignments_tests.cpp
Legacy/CppCourseworkExercises2016/modernized/: CMakeLists.txt
Legacy/CppCourseworkExercises2016/modernized/include/: coursework_exercises.hpp
Legacy/CppCourseworkExercises2016/modernized/scripts/: test.ps1
Legacy/CppCourseworkExercises2016/modernized/tests/: coursework_exercises_tests.cpp
Legacy/DrunkardCardGame/modernized/: CMakeLists.txt
Legacy/DrunkardCardGame/modernized/include/: drunkard_card_game.hpp
Legacy/DrunkardCardGame/modernized/scripts/: test.ps1
Legacy/DrunkardCardGame/modernized/tests/: drunkard_card_game_tests.cpp
Legacy/InclinedPlaneFrictionStudy/modernized/: CMakeLists.txt
Legacy/InclinedPlaneFrictionStudy/modernized/include/: inclined_plane_friction.hpp
Legacy/InclinedPlaneFrictionStudy/modernized/scripts/: test.ps1
Legacy/InclinedPlaneFrictionStudy/modernized/tests/: inclined_plane_friction_tests.cpp
Legacy/ProgrammingExercisesRC/modernized/: CMakeLists.txt  README.md
Legacy/ProgrammingExercisesRC/modernized/include/: programming_exercises.hpp
Legacy/ProgrammingExercisesRC/modernized/tests/: programming_exercises_tests.cpp
(+404 files in other folders)
